--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+* {
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: "Josefin Sans", "Roboto";
+  overflow-x: hidden;
+}
+
+html,
 body {
-  background-color: black;
+  height: 100%;
+  width: 100%;
 }
